--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -2,13 +2,49 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>History of Converted Currency</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+
+        .container {
+            margin: 20px auto;
+            max-width: 800px;
+        }
+
+        h1 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        th, td {
+            padding: 10px;
+            text-align: left;
+        }
+
+        th {
+            background-color: #343a40;
+            color: #ffffff;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+
+        tr:hover {
+            background-color: #d9edf7;
+        }
+    </style>
 </head>
 <body>
-
-<div class="container mt-4">
-
-    <h1 class="text-center mb-4">Currency Converter History</h1>
+<div class="container">
+    <h1 class="text-center">Currency Converter History</h1>
     <table class="table table-striped table-bordered">
         <thead class="thead-dark">
         <tr>
@@ -29,8 +65,6 @@
         </tr>
         </tbody>
     </table>
-
 </div>
-
 </body>
 </html>
